--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "nodemon": "^2.0.14",
-    "path": "^0.12.7",
+    "path": "^0.12.7"
   }
 }
